--- a/equalizer-landing-page/starter-code/index.html
+++ b/equalizer-landing-page/starter-code/index.html
@@ -35,6 +35,9 @@
     </section>
     <section>
       <h4>Premium EQ</h4>
+      <h4>Premium EQ</h4>
+      <h4>Premium EQ</h4>
+      <h4>Premium EQ</h4>
 
       <p>
         Get expert-level control with a robust equalizer, volume mixer, and
