--- a/equalizer-landing-page/starter-code/index.html
+++ b/equalizer-landing-page/starter-code/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="icon"
@@ -14,38 +18,69 @@
     <title>Equalizer</title>
   </head>
   <body>
-    <section class="img-container">
+    <main>
+    <header class="img-container">
       <img src="./img/logo.svg" class="logo" alt="logo equalizer" />
 
-      <img
+      <!-- <img
         src="./img/bg-pattern-1.svg"
         class="img-top-right"
         alt="equalizer pattern image"
-      />
-    </section>
-    <section class="main-text-container">
+      /> -->
+      </header>
+    <section class="top-section">
       <h1>We make your music sound extraordinary.</h1>
 
-      <p>
+      <p class="text-body1">
         A system audio equalizer specifically designed for Android and iOS.
         Freely tune the way your music sounds with a professional grade
         parametric EQ & volume mixer. Control bass, mids, treble, gain control,
         reverb, and more!
       </p>
     </section>
-    <section>
-      <h4>Premium EQ</h4>
-      <h4>Premium EQ</h4>
-      <h4>Premium EQ</h4>
-      <h4>Premium EQ</h4>
+    <section class="mid-section">
+      <div>
+        <img
+        src="./img/illustration-app.png"
+        class="app-image"
+        alt="illustration"
+      />
+      </div>
+     
+       <div class="mid-section-bg">
+        
+</div>
+        <!-- <div class="premium-card">
+          <h2>Premium EQ</h2>
 
-      <p>
-        Get expert-level control with a robust equalizer, volume mixer, and
-        spatial audio. Take your listening experience to a whole new level and
-        access all our incredible features! $4 / month iOS Download Android
-        Download All rights reserved © Equalizer 2021 Have any problems? Contact
-        us via social media or email us at equalizer@example.com
-      </p>
+          <p>
+            Get expert-level control with a robust equalizer, volume mixer, and
+            spatial audio. Take your listening experience to a whole new level
+            and access all our incredible features!
+          </p>
+          <div class="price-block">
+            <span class="price">$4</span>
+            <div class="text-holder">
+              <p class="text-sml">/ month</p>
+            </div>
+          </div>
+          <button class="btn-black">
+            <img src="./img/icon-apple.svg" alt="apple icon" /> iOS Download
+          </button>
+          <button class="btn-white">
+            <img src="./img/icon-android.svg" alt="android icon" /> Android
+            Download
+          </button>
+
+          Download All rights reserved © Equalizer 2021 Have any problems?
+          Contact us via social media or email us at equalizer@example.com
+        </div> -->
+      </div>
     </section>
+    </main>
+    <footer>
+
+
+    </footer>
   </body>
 </html>
